--- a/app/main.css
+++ b/app/main.css
@@ -49,3 +49,12 @@
       transform: rotate(1800deg);
     }
   }
+  
+  @keyframes fadeInOpacity {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
